# internsidor

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Pipfile  Readme.md  data_import.py  legacy_export.py  lissmilter.py  manage.py  postfix_daemon.py  pyproject.toml  regenerate_requirements.sh  requirements-base.in  requirements-dev.txt  requirements-prod.in  requirements-prod.txt  requirements.in  requirements.txt
assetmanager/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
assetmanager/migrations/: 0001_initial.py  0002_auto_20200722_1325.py
assetmanager/static/: style.css
batadasen/: __init__.py  admin.py  apps.py  backends.py  factories.py  forms.py  gsuite.py  models.py  serializers.py  urls.py  views.py
batadasen/migrations/: 0001_initial.py  0002_auto_20200608_2304.py  0003_auto_20200613_0208.py  0004_auto_20200613_1820.py  0005_auto_20200613_2219.py  0006_auto_20200630_2331.py  0007_auto_20200630_2339.py  0008_auto_20200708_1435.py  0009_productiongrouptype_exclude_from_production_email.py  0010_emaillist_is_internal.py  0011_auto_20200714_1602.py  0012_auto_20200714_1701.py  0013_useractivation_provision_gsuite_account.py  0014_person_email_active.py  0015_alter_associationactivity_options_and_more.py  (+5 more)
internsidor/: asgi.py  local_settings.py.sample  settings.py  urls.py  wsgi.py
oidc_auth/: backends.py  models.py  serializers.py  urls.py  views.py
scripts/: generate_fixture.py
showcounter/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
spexflix/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+65 files in other folders)
