[project]
name = "internsidor"
version = "0.1.0"
description = "Internsidor för Linköpings Studentspex."
requires-python = ">=3.10,<3.11"

dependencies = [
    "django==4.2.17",
    "djangorestframework==3.15.2",
    "django-crispy-forms==2.3",
    "django-tables2==2.7.0",
    "crispy-bootstrap4==2024.10",
    "django-filter==23.5",
    "pillow==10.4.0",
    "djangorestframework-api-key==3.0.0",
    "django-ajax-selects==2.2.1",
]

[project.optional-dependencies]
production = [
    "mozilla-django-oidc==4.0.1",
    "pynetstring==0.5",
    "pymilter==1.0.5",
    "google-api-python-client==2.154.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
]
